--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,6 +92,10 @@ jobs:
       shell: bash
       run: |
         cd build && ninja
+    - uses: actions/upload-artifact@v4
+      with:
+        name: build
+        path: build/
     - name: Running C++ Tests
       shell: bash
       run: |
